--- a/templates/index.html
+++ b/templates/index.html
@@ -33,10 +33,7 @@
 <!--Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
     <div class="container-fluid" role="tablist">
-        <a title="" class="navbar-brand" href="{% url 'main:index' %}">
-            <img src="{% static 'main/img/logo.png' %}" alt="" width="30" height="30"
-                 class="d-inline-block align-text-top">Movie@Night
-        </a>
+        <a title="" class="navbar-brand" href="{% url 'main:index' %}">Movie@Night</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
