--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384 F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="shortcut icon" href="{% static 'image/planeta_koltso_fioletovyj_149425_1920x1080.jpg' %}" type="image/x-icon">
 
     <!--Scroll Bar-->
     <style>
@@ -149,7 +150,7 @@
 {%load cache%}
 {%cache 300 filter%}
 <!--Filters-->
-<form action="{%url 'main:filter'%}" method="get">
+<form action="{%url 'main:filter'%}" method="get" autocomplete="on">
     <div class="container">
         <div class="row row-cols-3 text-white text-center border border-3 bg-dark my-3">
             <div class="my-2 col">
