--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,15 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item disabled" href="#">Telegram: @Decamiron</a></li>
+                            <li><a class="dropdown-item disabled" href="#">E-Mail: yaroslav.zahnoiko@nure.ua</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                            <li><a class="dropdown-item disabled" href="#">E-Mail: oleksandr.ihnatiev@nure.ua</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                            <li><a class="dropdown-item disabled" href="#">E-Mail: danylo.bielytskyi@nure.ua</a></li>
                     </ul>
             </ul>
             <!--Search panel-->
